# canopyctl

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  INSTALL.md  README.md  canopyctl.py  canopyctl_simple.py  pyproject.toml  setup.py  standalone.py  test-comprehensive.py  test-integration.py
.github/workflows/: release.yml
canopyctl/: __init__.py  cli.py  core.py  exceptions.py  parsers.py
canopyctl/commands/: __init__.py  config.py  rebase.py
canopyctl/core/: __init__.py  backup_manager.py  git_ops.py  rebase_engine.py  repo_analyzer.py
docs/: README.md  index.md  packaging-and-distribution.md  quick-reference.md
